---------------------------------------------------------------------------------------------------
Version: 0.69.49
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.48
Date: 2025-06-01
  Changes:
    - (If you are on the stable branch, then you will not notice any differences until factorio updates next.)There are some changes in the experimental branch that are currently being controlled now, based on your version. Major changes:
      ► Tech hiding is now more inclusive to give better hiding of technologies! Let me know if this messes with anyone's saves.
      ► Rocket logistic requests now get properly set off, to not be misleading on Rubia.
---------------------------------------------------------------------------------------------------
Version: 0.69.47
Date: 2025-06-01
  Changes:
    - Factoriopedia simulations for armored trains fixed.
    - Added test functions for Wube for a bug report.
    - Wind turbines no longer have a dumb useless UI when clicked on... usually!
---------------------------------------------------------------------------------------------------
Version: 0.69.46
Date: 2025-05-31
  Changes:
    - So... don't be mad, but I fixed a bug that made trashsteroid health not scale as much as it needed when you got high physical damage technology... A totally understandable mistake! But on the bright side, I also added difficulty settings under Mod Settings => Map Settings. If your Rubia base starts suddenly exploding, you should use that! Good luck!
    - Difficulty settings added.
---------------------------------------------------------------------------------------------------
Version: 0.69.45
Date: 2025-05-31
  Changes:
    - Compatibility for blueprint shotgun.